--- a/templates/application.plush.html
+++ b/templates/application.plush.html
@@ -1,21 +1,37 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="utf-8">
-    <title>Buffalo - Buff</title>
-    <%= stylesheetTag("application.css") %>
-    <meta name="csrf-param" content="authenticity_token" />
-    <meta name="csrf-token" content="<%= authenticity_token %>" />
-    <link rel="icon" href="<%= assetPath("images/favicon.ico") %>">
-  </head>
-  <body>
+<html lang="en">
 
-    <div class="container">
-      <%= partial("flash.html") %>
-      <%= yield %>
-    </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Steady</title>
+  <%= stylesheetTag("application.css") %>
+  <meta name="csrf-param" content="authenticity_token" />
+  <meta name="csrf-token" content="<%= authenticity_token %>" />
+  <link rel="icon" href="<%= assetPath(" images/favicon.ico") %>">
+</head>
 
-    <%= javascriptTag("application.js") %>
-  </body>
+<body>
+
+  <div class="container">
+    <%= partial("flash.html") %>
+    <%= partial("nav.html") %>
+    <%= yield %>
+  </div>
+
+  <script>
+    var monacoWorkerAssets = {
+      "html": '<%= assetPath("html.worker.js") %>',
+      "json": '<%= assetPath("json.worker.js") %>',
+      "css": '<%= assetPath("css.worker.js") %>',
+      "ts": '<%= assetPath("ts.worker.js") %>',
+      "editor": '<%= assetPath("editor.worker.js") %>',
+    }
+  </script>
+  <%= javascriptTag("application.js") %>
+
+
+</body>
+
 </html>
